<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.DetailsFragment"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/ownerInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/app_name"

       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OwnerName_textView"
        android:layout_margin="17dp"
        android:text="@string/app_name"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ownerNumber_textView"
        android:text="@string/app_name"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/car_imageview"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/Maker" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carname_textView"
        android:layout_margin="20dp"
        android:text="@string/app_name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/Add_new_ownerInfo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/carModel"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Add_new_OwnerName_textView"
            android:layout_margin="10dp"
            android:text="@string/Maker"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Add_new_ownerNumber_textView"
            android:text="@string/ownerName"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Add_new_carname_textView"
            android:layout_margin="10dp"
            android:text="@string/ownerNumber"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:gravity="end"
            >
            <EditText
                android:id="@+id/Add_new_CarModel_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="12sp"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"
                android:hint="@string/carModel"
                android:layout_marginEnd="10dp"
                android:autofillHints="" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Add_new_CarMaker_EditText"
                android:layout_marginRight="10dp"
                android:hint="@string/Maker"
                android:inputType="text"
                android:textSize="12sp"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_marginEnd="10dp"
                android:autofillHints="" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Add_new_ownerName_EditText"
                android:hint="@string/ownerName"
                android:layout_marginRight="10dp"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textSize="12sp"
                android:layout_marginEnd="10dp"
                android:autofillHints="" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Add_new_ownerNumber_EditText"
                android:layout_marginRight="10dp"
                android:hint="@string/ownerNumber"
                android:textSize="12sp"
                android:inputType="phone"
                android:digits="0123456789"

                android:layout_marginEnd="10dp"
                android:autofillHints="" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>